# bioharmonize

./: .gitignore  CLAUDE.md  README.md  bdsctpulfathotakhmf1ga53atscausq  manifest  pyproject.toml
.beads/: .gitignore  metadata.json
.hypothesis/constants/: 00fcb6aa7652af59  155765737a44d7fd  23ff3262f33892ed  2b5d99982477cb15  3d7e4f14db49d863  45404e2e9a2855e4  688789121ab394bf  935ea0ebe69e6cb3  9b6a9b9af7c97a8b  b0f06b45ef5814f3  bab8a5c22b72094e  c07f1a96fbc58215  d4a17764db441139  dc601481a1525f63  e52113d6fc3512b3
.hypothesis/examples/04e6b3400353b141/: 3d98615fd41c69d3  edd1b8140473d935  ff6116c227de1a53
.hypothesis/examples/3d98615fd41c69d3/: 0066aaaaf2b57483  0186f7fd83c07358  01dda14e7a428307  02e93d01667757c1  035e6d47af780726  039181ac24417be0  044d0eb349f7d22f  04917ba260d055c4  055a0ee06011d69c  0576404bd5b85568  06e9a1a04ba73653  06fb32c52370ec3b  07a900ce8e5dc0d2  07adbee22b61850e  083d679a8623a98d  09292f01655fc892  09bb857800482fac  09d3ce33c18e3f92  09e5fa5f5d092a8e  (+295 more)
.runtime/: session_id
bioharmonize/: __init__.py  aliases.py  anndata.py  api.py  changes.py  cli.py  io.py  issues.py  normalizers.py  preflight.py  profiles.py  report.py  sanity.py  specs.py  utils.py  validators.py
tests/: test_clean_obs.py  test_cli.py  test_cli_edge.py  test_cli_h5ad.py  test_edge_cases.py  test_hypothesis.py  test_io_edge.py  test_metamorphic.py  test_new_api.py  test_patch_anndata.py  test_preflight.py  test_profiles.py  test_readiness.py  test_real_data.py  test_realistic.py  test_repair_structural.py  test_sanity.py  test_validate_obs.py
(+675 files in other folders)
