[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bioharmonize"
version = "0.1.0"
description = "Normalize and validate biological study metadata before downstream analysis."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Clay Cantrell" }]
keywords = ["bioinformatics", "metadata", "single-cell", "anndata", "normalization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["pandas>=1.5"]

[project.optional-dependencies]
anndata = ["anndata>=0.8"]
cli = ["click>=8.0"]
dev = ["pytest>=7.0", "anndata>=0.8", "click>=8.0"]

[project.scripts]
bioharmonize = "bioharmonize.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
